--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "dependencies": {
     "gatsby": "next",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-typescript": "next",
+    "gatsby-plugin-typography": "next",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "@types/node": "^10.3.1",
-    "@types/react": "16.3.16",
-    "@types/react-dom": "16.0.6",
-    "gatsby-plugin-typescript": "next",
-    "gatsby-plugin-typography": "next",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-typography": "^0.16.13",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
+    "reselect": "^3.0.1",
+    "rxjs": "^6.2.2",
     "typography": "^0.16.17",
     "typography-theme-bootstrap": "^0.16.7"
   },
@@ -29,6 +32,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/node": "^10.3.1",
+    "@types/react": "16.3.16",
+    "@types/react-dom": "16.0.6",
+    "@types/react-redux": "^6.0.4",
     "prettier": "^1.12.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
