--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-typescript": "next",
     "gatsby-plugin-typography": "next",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-json": "^1.0.20",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
