--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "next",
+    "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-typescript": "next",
     "gatsby-plugin-typography": "next",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-json": "^1.0.20",
+    "material-design-icons": "^3.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
@@ -20,8 +23,11 @@
     "redux-observable": "^1.0.0",
     "reselect": "^3.0.1",
     "rxjs": "^6.2.2",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.0",
     "typography": "^0.16.17",
-    "typography-theme-bootstrap": "^0.16.7"
+    "typography-theme-bootstrap": "^0.16.7",
+    "typography-theme-elk-glen": "^0.16.9"
   },
   "keywords": [
     "gatsby"
@@ -38,6 +44,7 @@
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
     "@types/react-redux": "^6.0.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "prettier": "^1.12.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
